--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,11 +5,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+        android:background="@color/white"
     tools:context=".activities.MainActivity">
 
     <include
-        layout="@layout/view_toolbar_center" />
+        layout="@layout/view_toolbar_center"
+    android:id="@+id/toolbar"/>
 
 
+    <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/container"
+            android:layout_below="@id/toolbar"/>
 
 </RelativeLayout>
