--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-        android:background="@color/white"
+        android:background="@color/white_70"
     tools:context=".activities.MainActivity">
 
     <include
@@ -17,6 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/container"
+            android:background="@color/transparent"
             android:layout_below="@id/toolbar"/>
 
 </RelativeLayout>
