--- a/app/src/main/res/layout/list_weeks.xml
+++ b/app/src/main/res/layout/list_weeks.xml
@@ -8,6 +8,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="2dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginBottom="4dp"
+        app:cardUseCompatPadding="true"
         android:orientation="vertical">
 
     <LinearLayout
