--- a/app/src/main/res/layout/view_set_initial_amount.xml
+++ b/app/src/main/res/layout/view_set_initial_amount.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
-              xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
@@ -25,10 +24,9 @@
                       android:layout_height="wrap_content"
                         android:text="@string/enterAmount"
                         android:layout_margin="4dp"
-                        android:textStyle="bold"
-                      android:textSize="28sp"
+                        android:textStyle="normal"
                       android:gravity="center"
-                      android:textColor="@color/black"
+                      android:textSize="18sp"
             />
 
             <LinearLayout android:orientation="horizontal"
@@ -37,8 +35,8 @@
                 <ImageView
                         android:padding="4dp"
                         android:scaleType="fitCenter"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
                         android:layout_gravity="center_vertical"
                         app:srcCompat="@drawable/ic_monetization_on_black_24dp"
                         android:tint="@color/colorPrimary"
@@ -53,7 +51,7 @@
                         android:layout_height="wrap_content">
 
                     <EditText
-                            android:id="@+id/etEmail"
+                            android:id="@+id/etInitialAmount"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_margin="5dp"
@@ -72,8 +70,8 @@
                 <ImageView
                         android:padding="4dp"
                         android:scaleType="fitStart"
-                        android:layout_width="80dp"
-                        android:layout_height="80dp"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
                         android:layout_gravity="center_vertical"
                         app:srcCompat="@drawable/ic_wallet"
                         android:tint="@color/colorPrimary"
@@ -88,12 +86,13 @@
                         android:layout_height="wrap_content">
 
                     <TextView
-                            android:id="@+id/txPaymentStatus"
+                            android:id="@+id/txTotalAmount"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:text="@string/totalSaved"
                             android:textColor="@color/black"
-                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            android:textAppearance="?android:attr/textAppearanceSmall"
+                            android:textSize="20sp"
                             android:textStyle="bold"/>
 
                     <TextView
@@ -101,8 +100,7 @@
                             android:layout_height="wrap_content"
                             android:text="@string/totalSaved"
                             android:textAppearance="?android:attr/textAppearanceSmall"
-                            android:textSize="24sp"
-                            android:textStyle="bold"/>
+                            android:textStyle="normal"/>
 
                 </LinearLayout>
             </LinearLayout>
@@ -122,13 +120,15 @@
         <TextView android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/weeks"
-                  android:layout_margin="4dp"
+                  android:layout_marginRight="4dp"
+                  android:layout_marginLeft="4dp"
                   android:textStyle="bold"
                   android:textAppearance="?android:attr/textAppearanceMedium"
                   android:textColor="@color/black"/>
 
             <LinearLayout
-                    android:layout_margin="5dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginLeft="5dp"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="9"
