--- a/app/src/main/res/layout/activity_main_collapsing_toolbar.xml
+++ b/app/src/main/res/layout/activity_main_collapsing_toolbar.xml
@@ -35,16 +35,6 @@
                         android:layout_gravity="center"
                         android:orientation="horizontal">
 
-                    <ImageView
-                            android:padding="4dp"
-                            android:scaleType="fitStart"
-                            android:layout_width="48dp"
-                            android:layout_height="48dp"
-                            android:layout_gravity="center_vertical"
-                            app:srcCompat="@drawable/ic_wallet"
-                            android:tint="@color/white"
-                            android:layout_margin="5dp"/>
-
                     <LinearLayout
                             android:layout_gravity="center_vertical"
                             android:layout_margin="5dp"
@@ -54,24 +44,38 @@
                             android:layout_height="wrap_content">
 
                         <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="@string/totalSaved"
+                                android:textAppearance="?android:attr/textAppearanceSmall"
+                                android:textColor="@color/white"
+
+                                android:textStyle="normal"/>
+
+                        <TextView
                                 android:id="@+id/txTotalAmount"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="@string/totalSaved"
                                 android:textColor="@color/white"
                                 android:textAppearance="?android:attr/textAppearanceSmall"
-                                android:textSize="28sp"
+                                android:textSize="40sp"
+                                android:gravity="center"
                                 android:textStyle="bold"/>
 
-                        <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:text="@string/totalSaved"
-                                android:textAppearance="?android:attr/textAppearanceMedium"
-                                android:textColor="@color/white"
-                                android:textStyle="normal"/>
 
                     </LinearLayout>
+
+                    <ImageView
+                            android:padding="4dp"
+                            android:scaleType="fitStart"
+                            android:layout_width="48dp"
+                            android:layout_height="48dp"
+                            android:layout_gravity="center_vertical"
+                            app:srcCompat="@drawable/ic_wallet"
+                            android:tint="@color/white"
+                            android:visibility="gone"
+                            android:layout_margin="5dp"/>
                 </LinearLayout>
 
             </LinearLayout>
@@ -99,7 +103,7 @@
                 android:layout_weight="9"
                 android:orientation="vertical">
 
-            <androidx.cardview.widget.CardView  android:layout_margin="5dp"
+            <androidx.cardview.widget.CardView  android:layout_margin="2dp"
                                                 android:id="@+id/cdView"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="wrap_content"
@@ -148,21 +152,23 @@
                         </com.google.android.material.textfield.TextInputLayout>
 
                     </LinearLayout>
+
+                    <TextView android:layout_width="match_parent"
+                              android:layout_height="wrap_content"
+                              android:text="@string/weeks"
+                              android:layout_marginRight="4dp"
+                              android:layout_marginLeft="4dp"
+                              android:textStyle="bold"
+                              android:textAppearance="?android:attr/textAppearanceMedium"
+                              android:textColor="@color/black"/>
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
-        <TextView android:layout_width="match_parent"
-                  android:layout_height="wrap_content"
-                  android:text="@string/weeks"
-                  android:layout_marginRight="4dp"
-                  android:layout_marginLeft="4dp"
-                  android:textStyle="bold"
-                  android:textAppearance="?android:attr/textAppearanceMedium"
-                  android:textColor="@color/black"/>
+
 
         <LinearLayout
-                android:layout_marginRight="5dp"
-                android:layout_marginLeft="5dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginLeft="2dp"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="9"
