--- a/app/src/main/res/layout/list_weeks.xml
+++ b/app/src/main/res/layout/list_weeks.xml
@@ -26,6 +26,7 @@
                 android:layout_margin="5dp"
                 android:padding="20dp"
                 android:background="@color/colorPrimary"
+                android:visibility="gone"
                 android:id="@+id/imgColor"/>
 
         <LinearLayout
