--- a/app/src/main/res/layout/activity_main_collapsing_toolbar.xml
+++ b/app/src/main/res/layout/activity_main_collapsing_toolbar.xml
@@ -20,6 +20,7 @@
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
                 app:contentScrim="?attr/colorPrimary"
+                app:expandedTitleTextAppearance="@android:color/transparent"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <LinearLayout
@@ -49,7 +50,7 @@
                                 android:text="@string/totalSaved"
                                 android:textAppearance="?android:attr/textAppearanceSmall"
                                 android:textColor="@color/white"
-
+                                android:gravity="center"
                                 android:textStyle="normal"/>
 
                         <TextView
@@ -59,7 +60,7 @@
                                 android:text="@string/totalSaved"
                                 android:textColor="@color/white"
                                 android:textAppearance="?android:attr/textAppearanceSmall"
-                                android:textSize="40sp"
+                                android:textSize="32sp"
                                 android:gravity="center"
                                 android:textStyle="bold"/>
 
