--- a/app/src/main/res/menu/menu_new.xml
+++ b/app/src/main/res/menu/menu_new.xml
@@ -15,5 +15,5 @@
             android:title="@string/refresh"
             app:iconTint="@color/white"
             android:icon="@drawable/ic_refresh_black_24dp"
-            app:showAsAction="always|withText" />
+            app:showAsAction="always" />
 </menu>
