--- a/app/src/main/res/layout/activity_main_collapsing_toolbar.xml
+++ b/app/src/main/res/layout/activity_main_collapsing_toolbar.xml
@@ -1,15 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                 xmlns:tools="http://schemas.android.com/tools"
-                                                 android:layout_width="match_parent"
-                                                 android:layout_height="match_parent"
-                                                 android:fitsSystemWindows="true">
+
+<RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
+
+    <com.google.android.gms.ads.AdView
+            xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/adView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            ads:adSize="BANNER"
+            ads:adUnitId="ca-app-pub-8369413100676672/7353110442">
+    </com.google.android.gms.ads.AdView>
+
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:layout_above="@id/adView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="true">
 
     <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/app_bar"
             android:layout_width="match_parent"
-            android:layout_height="240dp"
+            android:layout_height="220dp"
             android:fitsSystemWindows="true"
             android:theme="@style/AppTheme.AppBarOverlay">
 
@@ -23,63 +41,8 @@
                 app:expandedTitleTextAppearance="@android:color/transparent"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                <LinearLayout
-                        android:gravity="center"
-                        android:layout_width="280dp"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:orientation="horizontal">
-
-                    <LinearLayout
-                            android:layout_gravity="center_vertical"
-                            android:layout_margin="5dp"
-                            android:layout_weight="9"
-                            android:layout_width="0dp"
-                            android:orientation="vertical"
-                            android:layout_height="wrap_content">
-
-                        <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:text="@string/totalSaved"
-                                android:textAppearance="?android:attr/textAppearanceSmall"
-                                android:textColor="@color/white"
-                                android:gravity="center"
-                                android:textStyle="normal"/>
-
-                        <TextView
-                                android:id="@+id/txTotalAmount"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:text="@string/totalSaved"
-                                android:textColor="@color/white"
-                                android:textAppearance="?android:attr/textAppearanceSmall"
-                                android:textSize="32sp"
-                                android:gravity="center"
-                                android:textStyle="bold"/>
-
-
-                    </LinearLayout>
-
-                    <ImageView
-                            android:padding="4dp"
-                            android:scaleType="fitStart"
-                            android:layout_width="48dp"
-                            android:layout_height="48dp"
-                            android:layout_gravity="center_vertical"
-                            app:srcCompat="@drawable/ic_wallet"
-                            android:tint="@color/white"
-                            android:visibility="gone"
-                            android:layout_margin="5dp"/>
-                </LinearLayout>
-
-            </LinearLayout>
+           <include
+               layout="@layout/view_toolbar_collapser" />
 
             <androidx.appcompat.widget.Toolbar
                     android:id="@+id/tlBar"
@@ -97,127 +60,14 @@
                                            app:layout_behavior="@string/appbar_scrolling_view_behavior"
                                            android:layout_height="match_parent">
 
-        <LinearLayout
-                android:id="@+id/cdView2"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="9"
-                android:orientation="vertical">
-
-            <androidx.cardview.widget.CardView  android:layout_margin="2dp"
-                                                android:id="@+id/cdView"
-                                                android:layout_width="match_parent"
-                                                android:layout_height="wrap_content"
-                                                app:cardCornerRadius="2dp"
-                                                app:cardUseCompatPadding="true">
-
-                <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
-                    <TextView android:layout_width="match_parent"
-                              android:layout_height="wrap_content"
-                              android:text="@string/enterAmount"
-                              android:layout_margin="4dp"
-                              android:textStyle="normal"
-                              android:gravity="center"
-                              android:textSize="18sp"
-                    />
-
-                    <LinearLayout android:orientation="horizontal"
-                                  android:layout_width="match_parent" android:layout_height="wrap_content">
-
-                        <ImageView
-                                android:padding="4dp"
-                                android:scaleType="fitCenter"
-                                android:layout_width="48dp"
-                                android:layout_height="48dp"
-                                android:layout_gravity="center_vertical"
-                                app:srcCompat="@drawable/ic_monetization_on_black_24dp"
-                                android:tint="@color/colorPrimary"
-                                android:layout_margin="5dp"/>
-
-
-                        <com.google.android.material.textfield.TextInputLayout
-                                android:layout_weight="8"
-                                app:hintTextAppearance="@style/TextLabel"
-                                android:layout_width="match_parent"
-                                android:layout_gravity="center_vertical"
-                                android:layout_height="wrap_content">
-
-                            <EditText
-                                    android:id="@+id/etInitialAmount"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_margin="5dp"
-                                    android:hint="@string/initialAmount"
-                                    android:inputType="numberDecimal" />
-
-                        </com.google.android.material.textfield.TextInputLayout>
-
-                    </LinearLayout>
-
-                    <TextView android:layout_width="match_parent"
-                              android:layout_height="wrap_content"
-                              android:text="@string/weeks"
-                              android:layout_marginRight="4dp"
-                              android:layout_marginLeft="4dp"
-                              android:textStyle="bold"
-                              android:textAppearance="?android:attr/textAppearanceMedium"
-                              android:textColor="@color/black"/>
-                </LinearLayout>
-            </androidx.cardview.widget.CardView>
-
-
-
-        <LinearLayout
-                android:layout_marginRight="2dp"
-                android:layout_marginLeft="2dp"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="9"
-                android:orientation="vertical">
-
-            <com.santalu.emptyview.EmptyView
-                    android:id="@+id/empView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:ev_gravity="center"
-                    app:ev_empty_textColor="@color/colorPrimary"
-                    app:ev_empty_titleTextColor="@color/colorPrimary"
-                    app:ev_empty_buttonTextColor="@color/white"
-                    app:ev_empty_drawable="@drawable/ic_empty_em"
-                    app:ev_empty_drawableTint="@color/colorAccent"
-                    app:ev_empty_text="@string/emptyString"
-                    app:ev_empty_title="@string/emptyTitle"
-                    app:ev_error_backgroundColor="@color/colorRed"
-                    app:ev_error_button="@string/errorTryAgain"
-                    app:ev_error_buttonTextColor="@color/white"
-                    app:ev_error_drawable="@drawable/ic_empty_error"
-                    app:ev_error_drawableTint="@color/white"
-                    app:ev_error_text="@string/error_unknown"
-                    app:ev_error_textColor="@color/white"
-                    app:ev_error_title="@string/error_unknown_title"
-                    app:ev_error_titleTextColor="@color/white"
-                    app:ev_loading_drawable="@drawable/ic_empty_list"
-                    app:ev_loading_drawableTint="@color/colorAccent"
-                    app:ev_loading_title="@string/loadingTitle"
-                    app:ev_loading_type="circular"
-                    app:ev_loading_textColor="@color/colorPrimary"
-                    app:ev_loading_titleTextColor="@color/colorPrimary"
-                    app:ev_transition="auto">
-
-                <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rvMain"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        tools:listitem="@layout/list_weeks" />
-
-            </com.santalu.emptyview.EmptyView>
-
-            </LinearLayout>
-        </LinearLayout>
+       <include
+           layout="@layout/view_nested_recycler" />
 
     </androidx.core.widget.NestedScrollView>
 
 
-
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+
+
+</RelativeLayout>
